--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
-  "name": "mongoose_skeleton",
+  "name": "Workout Traker",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seed": "node seeders/seed.js"
+    "seed": "node seeds/seed.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zocartes/homework-noSQL.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zocartes/homework-noSQL/issues"
+  },
+  "homepage": "https://github.com/zocartes/homework-noSQL#readme",
+  "devDependencies": {
+    "eslint": "^7.24.0",
+    "prettier": "^2.2.1"
+  },
   "dependencies": {
-    "express": "^4.16.3",
-    "mongoose": "^5.3.16",
-    "morgan": "^1.9.1"
+    "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.4",
+    "morgan": "^1.10.0"
   }
 }
